<resources>
    <string name="app_name">Daily News</string>
    <string name="welcome">WELCOME TO</string>
    <string name="email_address">email@example.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="signup">Sign Up</string>
    <string name="signuptext">Sign Up with</string>
    <string name="sign_in_text">
        Already have an account? <u>Sign In</u>
    </string>
    <string name="empty_email">Enter email address!</string>
    <string name="empty_passwprd">Enter email address!</string>

    <string name="log_in">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_in_with">Login with</string>
    <string name="sign_up_text">
      Don\'t have an account? <u>Sign Up</u>
    </string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_password_text">We just need your registered Email \naddress to send your password reset \ninstructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_notification">We have sent you instructions to reset your password!</string>
    <string name="password_notification_failed">Failed to send reset email!</string>
</resources>
