<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    tools:context="com.andela.suada.dailynews.views.ResetPasswordActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_space">
        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo1"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_text"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_space"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/text_bg_transparent"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="#5F5E5E"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btResetPassword"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_text_view_rounded"
            android:minHeight="5dp"
            android:padding="9dp"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:background="@null" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
